--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,7 +26,8 @@ dependencies:
   http: ^0.13.3
   shared_preferences: ^2.0.6
   provider: ^5.0.0
-
+  flutter_local_notifications: ^8.1.1+1
+  rxdart: ^0.27.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
