--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -3,7 +3,7 @@
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
     <uses-permission android:name="android.permission.INTERNET" />
    <application
-        android:label="rollychat"
+        android:label="IMBS"
         android:icon="@mipmap/ic_launcher">
         
         <activity
